--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body {
   
   .bg-image {
     /* The image used */
-    background-image: url("https://picsum.photos/1920/1080");
+    background-image: url("https://pixabay.com/illustrations/hacker-cyber-crime-internet-2300772/");
     
     /* Add the blur effect */
     filter: blur(1px);
