--- a/style.css
+++ b/style.css
@@ -29,8 +29,7 @@ html, body {
   
   
   .bg-text {
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+    background-color: #001213; /* Fallback color */
     color: white;
     font-weight: bold;
     position: absolute;
